--- a/Hostel223/Hostel223.csproj
+++ b/Hostel223/Hostel223.csproj
@@ -62,6 +62,9 @@
     <Compile Include="RegistrationWindow.xaml.cs">
       <DependentUpon>RegistrationWindow.xaml</DependentUpon>
     </Compile>
+    <Compile Include="RoomsManagementWindow.xaml.cs">
+      <DependentUpon>RoomsManagementWindow.xaml</DependentUpon>
+    </Compile>
     <Compile Include="UsersManagementWindow.xaml.cs">
       <DependentUpon>UsersManagementWindow.xaml</DependentUpon>
     </Compile>
@@ -93,6 +96,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="RegistrationWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="RoomsManagementWindow.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
